--- a/package.json
+++ b/package.json
@@ -3,23 +3,33 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@apollo/react-hooks": "^3.1.4",
+    "@apollo/react-hooks": "^3.1.5",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "apollo-boost": "^0.4.7",
+    "apollo-link-context": "^1.0.20",
+    "auth0-js": "^9.13.2",
     "bootstrap": "^4.4.1",
+    "font-awesome-sass-loader": "^2.0.1",
     "graphql": "^15.0.0",
     "graphql-hooks": "^4.4.4",
     "graphql-tag": "^2.10.3",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.0",
+    "jwt-decode": "^2.2.0",
+    "node-sass": "^4.13.1",
     "popper": "^1.0.1",
+    "popper.js": "^1.16.1",
+    "prop-types": "^15.7.2",
     "react": "^16.13.1",
-    "react-apollo": "^3.1.4",
+    "react-apollo": "^3.1.5",
     "react-bootstrap": "^1.0.0",
-    "react-charts": "^2.0.0-beta.6",
+    "react-contenteditable": "^3.3.4",
+    "react-datepicker": "^2.14.1",
     "react-dom": "^16.13.1",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^3.4.1",
+    "react-sort-search-table": "^0.1.3",
+    "react-use-auth": "^0.6.1"
   },
   "scripts": {
     "start": "react-scripts start",
